// Copyright 2014-2015 The Dename Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";
package proto;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "client.proto";

// Verifier contains the persistent internal state of a verifier.
// Additional on-disk state is described in verifier/table.go.
message VerifierState {
	uint64 next_index = 1;
	uint64 next_epoch = 2;
	bytes previous_summary_hash = 3;
	uint64 latest_tree_snapshot = 4;
	AuthorizationPolicy keyserver_auth = 5;
}
